--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,19 @@ body{
     list-style: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
 .logo{
     color: var(--accent-color);
     text-decoration: none;
@@ -89,14 +102,14 @@ body{
     color: var(--accent-color);
 }
 
-/* .hero{
-    
-} */
+.hero{
+    background-color: var(--secondary-background-color);
+} 
 
 .hero .title{
     color:var(--secondary-color);
 
-    background-color: var(--secondary-background-color);
+    
 
     font-weight: 900;
     font-size: 44px;
@@ -114,8 +127,9 @@ body{
     border-radius: 4px;
     border-color: var(--accent-color);
 
-    /* ??????Если убираю, то Roboto не получается */
-    font-family: 'Roboto';
+    /* ??????Если убираю, то Roboto не получается
+    font-family: 'Roboto'; */
+    font-family: inherit;
    
     font-weight: 700;
     font-size: 16px;
@@ -164,12 +178,14 @@ body{
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
+    text-align: center;
 }
 
 .team .position{
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
+    text-align: center;
 }
 
 .footer{
@@ -199,9 +215,10 @@ body{
 
 
 .works .filter{
-    /* ??????Если убираю, то Roboto не получается */
-    font-family: 'Roboto';
+    /* ??????Если убираю, то Roboto не получается
+    font-family: 'Roboto'; */
 
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
